change requirement to java 8 package application